--- a/A1_design.css
+++ b/A1_design.css
@@ -11,7 +11,7 @@ Description: This is the css stylesheet which adds the design parts to the to my
 
 /* General body styling */
 body {
-    background-image: url('https://github.com/SparX-75/Portfolio-Alpha.github.io/blob/main/bg.png') no-repeat center center fixed;
+    background-image: url('https://github.com/SparX-75/Portfolio-Alpha.github.io/blob/main/bg.png');
     background-size: cover;
     color: #ffffff;
     font-family: 'Lato', sans-serif;
