--- a/A1_design.css
+++ b/A1_design.css
@@ -11,9 +11,8 @@ Description: This is the css stylesheet which adds the design parts to the to my
 
 /* General body styling */
 body {
-    background: url('bg.jpg') no-repeat center center fixed;
+    background: url('images/bg.png') no-repeat center center fixed;
     background-size: cover;
-    color: #ffffff;
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
