--- a/A1_design.css
+++ b/A1_design.css
@@ -13,7 +13,7 @@ Description: This is the css stylesheet which adds the design parts to the to my
 body {
     background: url("images/bg.png") no-repeat center center fixed;
     background-size: cover;
-    color: #ffffff;
+    color: #ffffff !important;
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
